--- a/reset.css
+++ b/reset.css
@@ -1,30 +1,116 @@
-/**
- * Based on Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
- */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+/* A Good Start to any projcet. includes the reset. */
+
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
-/* HTML5 display-role reset for older browsers */
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{ display: block; }
-*{
-	-webkit-box-sizing:border-box;
-	-moz-box-sizing:border-box;
+article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary {
+	display:block;
+	margin:0;
+	padding:0;
+}
+audio,canvas,video {
+	display:inline-block;
+	*display:inline;
+	*zoom:1;
+}
+audio:not([controls]) {
+	display:none;
+	height:0;
+}
+[hidden] { display:none; }
+html {
+	font-size:100%;
+	-webkit-text-size-adjust:100%;
+	-ms-text-size-adjust:100%;
+}
+html,button,input,select,textarea {
+	font-family:sans-serif;
+}
+body { margin:0; }
+b,strong { font-weight:bold; }
+blockquote { margin:0 40px 1em;
+}
+hr {
+	-moz-box-sizing:content-box;
+	box-sizing:content-box;
+	height:0;
+}
+p { margin:0 0 1em; }
+code,pre {
+	font-family:monospace,serif;
+	_font-family:'courier new',monospace;
+	font-size:1em;
+}
+pre {
+	white-space:pre;
+	white-space:pre-wrap;
+	word-wrap:break-word;
+	margin:0;
+}
+small { font-size:80% }
+dl,menu,ol,ul { margin:0 0 1em; }
+nav ul,nav ol {
+	list-style:none;
+	list-style-image:none;
+}
+img {
+	border:0;
+	-ms-interpolation-mode:bicubic;
+}
+svg:not(:root) { overflow:hidden; }
+figure, form { margin:0; }
+fieldset {
+	border:0;
+	margin:0;
+	padding:0;
+}
+legend {
+	border:0;
+	padding:0;
+	white-space:normal;
+	*margin-left:-7px;
+}
+button,input,select,textarea {
+	font-size:100%;
+	margin:0;
+	vertical-align:baseline;
+	*vertical-align:middle;
+}
+button,input { line-height:normal; }
+button,select { text-transform:none; }
+button,html input[type="button"],input[type="reset"],input[type="submit"] {
+	-webkit-appearance:button;
+	cursor:pointer;
+	*overflow:visible;
+}
+button[disabled],html input[disabled] { cursor:default; }
+input[type="checkbox"],input[type="radio"] {
 	box-sizing:border-box;
-	background-repeat:no-repeat;
+	padding:0;
+	*height:13px;
+	*width:13px;
 }
-body { line-height: 1; }
-ol, ul { list-style: none; }
-blockquote, q { quotes: none; }
-blockquote:before,blockquote:after,q:before, q:after {
-	content: '';
-	content: none;
+input[type="search"] {
+	-webkit-appearance:textfield;
+	-moz-box-sizing:content-box;
+	-webkit-box-sizing:content-box;
+	box-sizing:content-box;
+}
+input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration {
+	-webkit-appearance:none;
+}
+button::-moz-focus-inner,input::-moz-focus-inner {
+	border:0;
+	padding:0;
+}
+textarea {
+	overflow:auto;
+	vertical-align:top;
+	resize:vertical;
 }
 table {
-	border-collapse: collapse;
+	border-collapse:collapse;
 	border-spacing: 0;
 }
